/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-10-29 10:55 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/pp/ppcore.c
    ! fix memory leak on preprocessing

2014-10-27 14:40 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/vm/macro.c 
    ! added hb_macroClear borrow from harbour.
    ! hb_macroDelete  optimized to use  now call hb_macroClear 
    ! hb_macroGetType optimize to use hb_macroClear insted of hb_macroDelete

2014-10-27 14:40 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * winmake/makefile.gc
    ! minor update

2014-10-27 12:41 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/rtl/mtran.c
    ! removed unnecessary cast of (unsigned char) pszString[ ulOffset ]
  * source/rtl/hardcr.c  
    ! removed unnecessary cast of (unsigned char) pszString[ ulOffset ]
  * source/rtl/mlcfunc.c
    ! removed unnecessary cast of (unsigned char) pszString[ ulOffset ]
  * source/rtl/txtline.c
    ! removed unnecessary cast of ( unsigned char ) szText[ ulPos ]    
  * include/hbdefs.h
    ! removed the cast to char and unsigned char from the defines bellow
      #define HB_CHAR_HARD1
      #define HB_CHAR_HARD2
      #define HB_CHAR_SOFT1
      #define HB_CHAR_SOFT2
      
2014-10-27 12:25 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * include/inet.h
    ! changes to include of winsock2.h to make mingw happy
  * source/rtl/hbip.c  
    ! changes to include of winsock2.h to make mingw happy
  * source/vm/fm.c
    ! minor fix to make mingw happy
    
2014-10-25 22:45 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/hbzlib/include/zipcollections.h
    ! fixes to make mingw gcc 4.7 or newer happy

2014-10-24 14:25 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/common/hbstr.c
    ! more precision in arithmetic; minor formatting
